--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<h1>{{ title }}</h1>
+<app-googlemaps></app-googlemaps>
 
-<!-- this creates a google map on the page with the given lat/lng from -->
-<!-- the component as the initial center of the map: -->
-<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-</agm-map>
 
