--- a/src/app/googlemaps/googlemaps.component.html
+++ b/src/app/googlemaps/googlemaps.component.html
@@ -5,6 +5,6 @@
 
 <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
   <agm-marker [latitude]="lat" [longitude]="lng">
-  <agm-info-window>ur momma triple gay bro</agm-info-window>
+  <agm-info-window>ur momma homo bro</agm-info-window>
   </agm-marker>
 </agm-map>
