--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-googlemaps></app-googlemaps>
+<app-topnav></app-topnav>
 
+<app-main>
+    <app-googlemaps></app-googlemaps>
+</app-main>
+
+
+<app-footer></app-footer>
 
