--- a/src/app/googlemaps/googlemaps.component.html
+++ b/src/app/googlemaps/googlemaps.component.html
@@ -4,9 +4,11 @@
 <!-- the component as the initial center of the map: -->
 
 <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
-  <agm-marker [latitude]="lat" [longitude]="lng">
-  <agm-info-window><app-linkedevents></app-linkedevents></agm-info-window>
-  </agm-marker>
+    <agm-marker *ngFor="let eventti of mediaService.events" [latitude]="eventti.paikka.position.coordinates[1]" [longitude]="eventti.paikka.position.coordinates[0]">
+        <agm-info-window>
+            <div [innerHTML]="eventti.description.en"></div>
+        </agm-info-window>
+    </agm-marker>
 </agm-map>
 
 
