--- a/src/app/topnav/topnav.component.html
+++ b/src/app/topnav/topnav.component.html
@@ -1,12 +1,10 @@
 <div class="topnav">
     <div class="dropdown">
-        <button class="dropbtn">Dropdown
+        <button class="dropbtn">Tapahtumat
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <li *ngFor="let eventti of mediaService.events" [innerHTML]="eventti.name.fi"></li>
         </div>
     </div>
     <a href="#">About</a>
