--- a/src/app/topnav/topnav.component.html
+++ b/src/app/topnav/topnav.component.html
@@ -4,10 +4,13 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <li *ngFor="let eventti of mediaService.events" [innerHTML]="eventti.name.fi"></li>
+            <ul>
+                <li *ngFor="let eventti of mediaService.events"><a [href]="">{{eventti.name.fi}}</a></li>
+            </ul>
         </div>
+        <input type="text" placeholder="Search..">
     </div>
-    <a href="#">About</a>
+    <a href="">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
