--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,20 @@
-<app-topnav></app-topnav>
+<html lang="en">
+<head>
+    <title>TapahtumaMap</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+</head>
+<body>
 
 <app-main>
 </app-main>
+
+
+</body>
+</html>
+
 
 
 
