--- a/src/app/topnav/topnav.component.scss
+++ b/src/app/topnav/topnav.component.scss
@@ -111,3 +111,24 @@
     text-align: left;
   }
 }
+
+ul {
+  list-style: none; /* Remove list bullets */
+  padding: 0;
+  margin: 0;
+}
+
+
+#tapahtumat{
+  font-family: Helvetica;
+}
+
+#sää{
+  font-family: Helvetica;
+}
+
+#help{
+  font-family: Helvetica;
+}
+
+
