--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,3 @@
-<p>
-  <app-googlemaps></app-googlemaps>
-  <app-linkedevents></app-linkedevents>
-</p>
+<app-topnav></app-topnav>
+<app-googlemaps></app-googlemaps>
+<app-linkedevents></app-linkedevents>
